--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .h1 {
+        @apply uppercase text-4xl font-semibold;
+    }
+
+    .h3 {
+        @apply uppercase text-2xl font-semibold;
+    }
+}
+
+@layer components {
+    body {
+        @apply dark:bg-gray-900 dark:text-white;
+    }
+
+    .button {
+        @apply my-2 py-1 px-2 uppercase font-semibold outline-none rounded-md ring-primary
+            focus-visible:ring
+            hover:filter hover:brightness-110
+            active:brightness-90;
+    }
+
+    .button-coloured {
+        @apply button bg-primary dark:bg-primary-800 text-white ring-offset-4
+            dark:ring-offset-gray-900;
+    }
+
+    .textarea {
+        @apply form-textarea dark:bg-gray-800 rounded-lg rounded-br-none;
+    }
+}
